--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.6"
 services:
   stacks-blockchain:
     image: blockstack/stacks-blockchain:2.0.11.1.0
+    command: /bin/stacks-node start --config /src/stacks-node/Config.toml
     ports:
       - "20443:20443"
       - "20444:20444"
