--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,11 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@prisma/client": "2.25.0"
   },
   "devDependencies": {
     "@types/node": "15.12.4",
