--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@prisma/client": "2.20.1"
+    "@prisma/client": "2.20.1",
+    "date-fns": "2.22.1"
   },
   "devDependencies": {
     "@types/node": "15.12.4",
