--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "victory": "35.9.0"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
