--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@types/react": "17.0.11",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
+    "sass": "1.35.1",
     "typescript": "4.3.4"
   }
 }
