--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "date-fns": "2.22.1",
     "fathom-client": "3.0.0",
     "next": "11.0.1",
+    "next-seo": "4.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "victory": "35.9.0"
