--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@prisma/client": "2.20.1",
-    "date-fns": "2.22.1"
+    "date-fns": "2.22.1",
+    "fastify": "3.18.1"
   },
   "devDependencies": {
     "@types/node": "15.12.4",
