--- a/api/package.json
+++ b/api/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "@prisma/client": "2.20.1",
     "date-fns": "2.22.1",
-    "fastify": "3.18.1"
+    "fastify": "3.18.1",
+    "node-fetch": "2.6.1"
   },
   "devDependencies": {
     "@types/node": "15.12.4",
+    "@types/node-fetch": "2.5.10",
     "prisma": "2.20.1",
     "ts-node": "10.0.0",
     "typescript": "4.3.4"
