--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,7 +7,25 @@ on:
     branches: [main]
 
 jobs:
-  build-server:
+  build-api:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+          cache: "npm"
+
+      - run: cd api
+      - run: npm ci
+
+      - name: Test
+        run: npx tsc --noEmit
+
+  build-client:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,5 +39,5 @@ jobs:
 
       - run: npm ci
 
-      - name: Test server
+      - name: Test
         run: npm run build
