--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,10 +17,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Use Node.js 14.x
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v1
         with:
           node-version: 14.x
-          cache: "npm"
+          # cache: "npm"
 
       - run: npm ci
 
@@ -37,10 +37,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Use Node.js 14.x
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v1
         with:
           node-version: 14.x
-          cache: "npm"
+          # cache: "npm"
 
       - run: npm ci
 
