--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@visx/gradient": "1.7.0",
+    "@visx/responsive": "1.10.1",
+    "@visx/scale": "1.14.0",
+    "d3-array": "3.0.1",
     "date-fns": "2.22.1",
     "fathom-client": "3.0.0",
     "next": "11.0.1",
