--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@visx/axis": "1.17.0",
     "@visx/gradient": "1.7.0",
     "@visx/grid": "1.16.0",
     "@visx/responsive": "1.10.1",
