--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@visx/axis": "1.17.0",
+    "@visx/event": "1.7.0",
     "@visx/gradient": "1.7.0",
     "@visx/grid": "1.16.0",
     "@visx/responsive": "1.10.1",
     "@visx/scale": "1.14.0",
+    "@visx/tooltip": "1.7.2",
     "d3-array": "2.12.1",
     "date-fns": "2.22.1",
     "fathom-client": "3.0.0",
