--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "victory": "35.9.0"
   },
   "devDependencies": {
+    "@types/d3-array": "3.0.1",
     "@types/react": "17.0.11",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
