--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,7 @@
     "next": "11.0.1",
     "next-seo": "4.26.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "victory": "35.9.0"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/d3-array": "3.0.1",
