--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "dev": "nodemon --watch './**/*.ts' --exec ts-node src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -15,6 +17,7 @@
   "devDependencies": {
     "@types/node": "15.12.4",
     "@types/node-fetch": "2.5.10",
+    "nodemon": "2.0.12",
     "prisma": "2.20.1",
     "ts-node": "10.0.0",
     "typescript": "4.3.4"
