--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build-api:
+  test-api:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -27,7 +27,10 @@ jobs:
       - name: Test
         run: npx tsc --noEmit
 
-  build-client:
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag stxstats-api:$(date +%s)
+
+  test-client:
     runs-on: ubuntu-latest
     defaults:
       run:
