--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,7 +28,10 @@ jobs:
         run: npx tsc --noEmit
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag stxstats-api:$(date +%s)
+        run:
+          docker build . --file Dockerfile --tag stxstats-api:$(date +%s)
+          # Print docker images so we can check the size
+          docker images | grep stxstats-api
 
   test-client:
     runs-on: ubuntu-latest
