--- a/api/package.json
+++ b/api/package.json
@@ -12,13 +12,13 @@
     "@prisma/client": "2.20.1",
     "date-fns": "2.22.1",
     "fastify": "3.18.1",
-    "node-fetch": "2.6.1"
+    "node-fetch": "2.6.1",
+    "prisma": "2.20.1"
   },
   "devDependencies": {
     "@types/node": "15.12.4",
     "@types/node-fetch": "2.5.10",
     "nodemon": "2.0.12",
-    "prisma": "2.20.1",
     "ts-node": "10.0.0",
     "typescript": "4.3.4"
   }
