feat(api): optimise docker image and auto reload in dev (#20)

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build-api:
+  test-api:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -27,7 +27,13 @@ jobs:
       - name: Test
         run: npx tsc --noEmit
 
-  build-client:
+      - name: Build the Docker image
+        run: |
+          docker build . --file Dockerfile --tag stxstats-api:$(date +%s)
+          # Print docker images so we can check the size
+          docker images | grep stxstats-api
+
+  test-client:
     runs-on: ubuntu-latest
     defaults:
       run:
