--- a/api/package.json
+++ b/api/package.json
@@ -3,19 +3,22 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "dev": "nodemon --watch './**/*.ts' --exec ts-node src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@prisma/client": "2.20.1",
     "date-fns": "2.22.1",
     "fastify": "3.18.1",
-    "node-fetch": "2.6.1"
+    "node-fetch": "2.6.1",
+    "prisma": "2.20.1"
   },
   "devDependencies": {
     "@types/node": "15.12.4",
     "@types/node-fetch": "2.5.10",
-    "prisma": "2.20.1",
+    "nodemon": "2.0.12",
     "ts-node": "10.0.0",
     "typescript": "4.3.4"
   }
