--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,8 @@ name: Release
 on:
   push:
     branches: [main]
+    # Publish semver tags as releases.
+    tags: ["v*.*.*"]
 
 env:
   REGISTRY: ghcr.io
