--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -54,7 +54,12 @@ services:
       - stacks-blockchain
 
   api:
-    image: ghcr.io/sigle/stxstats:main
+    build:
+      context: ./api
+      dockerfile: Dockerfile.dev
+    volumes:
+      - ./api:/usr/src/app
+      - /usr/src/app/node_modules/
     ports:
       - "4000:4000"
     environment:
