--- a/api/package.json
+++ b/api/package.json
@@ -21,8 +21,7 @@
     "twit": "2.2.11"
   },
   "devDependencies": {
-    "@types/bull": "^3.15.3",
-    "@types/debug": "^4.1.7",
+    "@types/debug": "4.1.7",
     "@types/node": "15.12.4",
     "@types/node-fetch": "2.5.10",
     "@types/twit": "2.2.30",
