--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,12 @@ services:
     networks:
       - stacks-blockchain
 
+  redis:
+    # TODO protect via password
+    image: "redis:5"
+    ports:
+      - "6379:6379"
+
   api:
     image: ghcr.io/sigle/stxstats:main
     ports:
@@ -65,6 +71,7 @@ services:
       - stacks-blockchain
     depends_on:
       - postgres
+      - redis
 
 volumes:
   db_data:
