--- a/api/.env.example
+++ b/api/.env.example
@@ -6,7 +6,8 @@
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
 TOKEN="token-dev"
-API_KEY='YOUR_TWITTER_API_KEY'
-API_SECRET_KEY='YOUR_TWITTER_API_SECRET_KEY'
-ACCESS_TOKEN='YOUR_TWITTER_ACCESS_TOKEN'
-ACCESS_TOKEN_SECRET='YOUR_TWITTER_TOKEN_SECRET'
+REBUILD_WEBHOOK_URL=""
+TWITTER_API_KEY='YOUR_TWITTER_API_KEY'
+TWITTER_API_SECRET_KEY='YOUR_TWITTER_API_SECRET_KEY'
+TWITTER_ACCESS_TOKEN='YOUR_TWITTER_ACCESS_TOKEN'
+TWITTER_ACCESS_TOKEN_SECRET='YOUR_TWITTER_TOKEN_SECRET'
