--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "2.20.1",
     "bullmq": "1.9.0",
     "date-fns": "2.22.1",
+    "envalid": "7.2.1",
     "debug": "4.3.2",
     "dotenv": "10.0.0",
     "fastify": "3.18.1",
