--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,10 @@ services:
       REDIS_PASSWORD: "${REDIS_PASSWORD}"
       TOKEN: "${TOKEN}"
       REBUILD_WEBHOOK_URL: "${REBUILD_WEBHOOK_URL}"
+      TWITTER_API_KEY: "${TWITTER_API_KEY}"
+      TWITTER_API_SECRET_KEY: "${TWITTER_API_SECRET_KEY}"
+      TWITTER_ACCESS_TOKEN: "${TWITTER_ACCESS_TOKEN}"
+      TWITTER_ACCESS_TOKEN_SECRET: "${TWITTER_ACCESS_TOKEN_SECRET}"
     networks:
       - stacks-blockchain
     depends_on:
