--- a/api/.env.example
+++ b/api/.env.example
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
-REDIS_PASSWORD=""
+REDIS_URL=""
 TOKEN="token-dev"
 REBUILD_WEBHOOK_URL=""
 TWITTER_API_KEY='YOUR_TWITTER_API_KEY'
