--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,8 @@ services:
     command: "redis-server --requirepass ${REDIS_PASSWORD}"
     ports:
       - "6379:6379"
+    networks:
+      - stacks-blockchain
 
   api:
     image: ghcr.io/sigle/stxstats:main
