--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,7 @@ services:
     environment:
       DATABASE_URL: "postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public"
       REDIS_URL: "redis://:${REDIS_PASSWORD}@redis:6379/0"
+      REBUILD_WEBHOOK_URL: "${REBUILD_WEBHOOK_URL}"
       TWITTER_API_KEY: "${TWITTER_API_KEY}"
       TWITTER_API_SECRET_KEY: "${TWITTER_API_SECRET_KEY}"
       TWITTER_ACCESS_TOKEN: "${TWITTER_ACCESS_TOKEN}"
