--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@radix-ui/colors": "0.1.7",
     "@radix-ui/react-icons": "1.0.3",
-    "@stitches/react": "1.0.0",
+    "@stitches/react": "1.2.2",
     "@visx/axis": "2.1.0",
     "@visx/event": "2.1.0",
     "@visx/gradient": "2.1.0",
@@ -19,8 +19,8 @@
     "@visx/scale": "2.1.0",
     "@visx/tooltip": "2.1.0",
     "d3-array": "2.12.1",
-    "date-fns": "2.23.0",
-    "fathom-client": "3.1.0",
+    "date-fns": "2.25.0",
+    "fathom-client": "3.2.0",
     "next": "11.1.2",
     "next-seo": "4.26.0",
     "next-themes": "0.0.15",
@@ -28,10 +28,12 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@fontsource/open-sans": "4.5.1",
     "@types/d3-array": "3.0.1",
     "@types/react": "17.0.19",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "typescript": "4.4.2"
+    "sass": "1.42.1",
+    "typescript": "4.4.3"
   }
 }
