--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,12 @@
     "@visx/grid": "2.4.0",
     "@visx/responsive": "2.4.1",
     "@visx/scale": "2.2.2",
+    "@visx/shape": "2.4.0",
     "@visx/tooltip": "2.2.2",
     "d3-array": "2.12.1",
     "date-fns": "2.27.0",
     "fathom-client": "3.2.0",
-    "next": "12.0.4",
+    "next": "12.0.7",
     "next-seo": "4.28.1",
     "next-themes": "0.0.15",
     "react": "17.0.2",
@@ -31,8 +32,8 @@
     "@fontsource/open-sans": "4.5.2",
     "@types/d3-array": "3.0.1",
     "@types/react": "17.0.37",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4",
+    "eslint": "8.4.1",
+    "eslint-config-next": "12.0.7",
     "sass": "1.44.0",
     "typescript": "4.5.2"
   }
