chore(server): switch from npm to pnpm

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,28 +3,30 @@ FROM node:14-alpine AS BUILD_SERVER
 
 WORKDIR /usr/src/app
 
-COPY package*.json ./
+RUN curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm
+
+COPY package.json pnpm-lock.yaml ./
 COPY prisma ./prisma
 
-RUN npm install
+RUN pnpm install --frozen-lockfile
 
 COPY . .
 
-RUN npm run build
+RUN pnpm run build
 
 # Stage 2 - Run the built application
 FROM node:14-alpine AS RUNTIME_CONTAINER
 
 WORKDIR /usr/src/app
 
-COPY package*.json ./
+COPY package.json pnpm-lock.yaml ./
 COPY prisma ./prisma
 
-RUN npm install --only=production
+RUN pnpm install --frozen-lockfile --prod
 
 COPY --from=BUILD_SERVER /usr/src/app/dist ./dist
 
 ENV NODE_ENV production
 
 EXPOSE 4000
-CMD [ "npm", "run", "start" ]
+CMD [ "pnpm", "run", "start" ]
