--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -3,7 +3,7 @@ FROM node:14-alpine
 
 WORKDIR /usr/src/app
 
-RUN curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm
+RUN wget -qO- https://get.pnpm.io/v6.16.js | node - add --global pnpm
 
 COPY package.json pnpm-lock.yaml ./
 COPY prisma ./prisma
