--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,16 +16,22 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6.23.6
+
       - name: Use Node.js 14.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 14.x
-          # cache: "npm"
+          cache: "pnpm"
+          cache-dependency-path: api/pnpm-lock.yaml
 
-      - run: npm ci
+      - name: Install Dependencies
+        run: pnpm install
 
       - name: Test
-        run: npx tsc --noEmit
+        run: pnpx tsc --noEmit
 
       - name: Build the Docker image
         run: |
