--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
+    "module": "commonjs",
+    "target": "ES2020",
+    "lib": ["esnext"],
     "sourceMap": true,
     "outDir": "dist",
     "strict": true,
-    "lib": ["esnext"],
     "esModuleInterop": true
   }
 }
