--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@radix-ui/colors": "0.1.8",
     "@radix-ui/react-icons": "1.0.3",
     "@stitches/react": "1.2.6",
+    "@types/react-burger-menu": "^2.8.2",
     "@visx/axis": "2.4.0",
     "@visx/curve": "2.1.0",
     "@visx/event": "2.1.2",
@@ -32,11 +33,15 @@
   },
   "devDependencies": {
     "@fontsource/open-sans": "4.5.2",
+    "@radix-ui/react-dialog": "^0.1.3",
+    "@radix-ui/react-separator": "^0.1.2",
     "@types/d3-array": "3.0.1",
+    "@types/node": "^16.11.12",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "sass": "1.44.0",
+    "twin.macro": "^2.8.2",
     "typescript": "4.5.2"
   }
 }
