--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
     # Publish semver tags as releases.
-    tags: ["v*.*.*"]
+    tags: ['v*.*.*']
 
 env:
   REGISTRY: ghcr.io
