--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "private": true,
   "scripts": {
-    "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md,mdx,yml}\""
+    "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md,mdx,yml}\"",
+    "prepare": "husky install"
   },
   "prettier": {
     "singleQuote": true
   },
+  "lint-staged": {
+    "*.{js,ts,tsx,css,scss,json,md,mdx,yml}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "devDependencies": {
+    "husky": "7.0.4",
+    "lint-staged": "12.2.2",
     "prettier": "2.5.1"
   }
 }
