--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Generate prisma client
+        run: pnpx prisma generate
+
       - name: Test
         run: pnpx tsc --noEmit
 
