fix docker image

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build the Docker image
         run: |
-          docker build . --file Dockerfile --tag stxstats-api:$(date +%s)
+          docker build .. --file Dockerfile --tag stxstats-api:$(date +%s)
           # Print docker images so we can check the size
           docker images | grep stxstats-api
 
