--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,14 +5,13 @@ WORKDIR /usr/src/app
 
 RUN wget -qO- https://get.pnpm.io/v6.16.js | node - add --global pnpm
 
-COPY package.json pnpm-lock.yaml ./
-COPY prisma ./prisma
+COPY package.json pnpm-*.yaml ./
 
 RUN pnpm install --frozen-lockfile
 
 COPY . .
 
-RUN pnpm run build
+RUN pnpm run build --filter=api
 
 # Stage 2 - Run the built application
 FROM node:16-alpine AS RUNTIME_CONTAINER
@@ -21,8 +20,8 @@ WORKDIR /usr/src/app
 
 RUN wget -qO- https://get.pnpm.io/v6.16.js | node - add --global pnpm
 
-COPY package.json pnpm-lock.yaml ./
-COPY prisma ./prisma
+COPY package.json pnpm-*.yaml ./
+COPY api/prisma ./api/prisma
 
 RUN pnpm install --frozen-lockfile --prod
 
@@ -31,4 +30,4 @@ COPY --from=BUILD_SERVER /usr/src/app/dist ./dist
 ENV NODE_ENV production
 
 EXPOSE 4000
-CMD [ "pnpm", "run", "start" ]
+CMD [ "pnpm", "run", "start", "--filter=api" ]
