--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,18 +24,20 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
-          cache: "pnpm"
-          cache-dependency-path: api/pnpm-lock.yaml
+          cache: 'pnpm'
 
       - name: Install Dependencies
         run: pnpm install
+
+      - name: Generate prisma client
+        run: pnpx prisma generate
 
       - name: Test
         run: pnpx tsc --noEmit
 
       - name: Build the Docker image
         run: |
-          docker build . --file Dockerfile --tag stxstats-api:$(date +%s)
+          docker build .. --file Dockerfile --tag stxstats-api:$(date +%s)
           # Print docker images so we can check the size
           docker images | grep stxstats-api
 
@@ -56,8 +58,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
-          cache: "pnpm"
-          cache-dependency-path: client/pnpm-lock.yaml
+          cache: 'pnpm'
 
       - name: Install Dependencies
         run: pnpm install
