ci: test docker release env in pr CI

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,11 +35,20 @@ jobs:
       - name: Test
         run: pnpx tsc --noEmit
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      # Same process as for the release, this step ensure that the docker release is not broken
       - name: Build the Docker image
-        run: |
-          docker build .. --file Dockerfile --tag stxstats-api:$(date +%s)
-          # Print docker images so we can check the size
-          docker images | grep stxstats-api
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          context: ./
+          file: ./api/Dockerfile
+
+      # Print docker images so we can check the size
+      - name: Print docker image size
+        run: docker images | grep stxstats-api
 
   test-client:
     runs-on: ubuntu-latest
