--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,6 +35,12 @@ jobs:
       - name: Test
         run: pnpx tsc --noEmit
 
+  test-api-docker:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -42,7 +48,7 @@ jobs:
       - name: Build the Docker image
         uses: docker/build-push-action@v2
         with:
-          push: true
+          push: false
           context: ./
           file: ./api/Dockerfile
 
