--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -43,12 +43,13 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          driver: docker
 
       # Same process as for the release, this step ensure that the docker release is not broken
       - name: Build the Docker image
         uses: docker/build-push-action@v2
         with:
-          driver: docker
           context: .
           push: false
           file: ./api/Dockerfile
