--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          driver: docker
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
@@ -42,7 +44,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: ./
+          context: .
           file: ./api/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
