--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "envalid": "7.2.2",
     "fastify": "3.24.1",
     "ioredis": "4.27.7",
+    "node-cache": "5.1.2",
     "node-fetch": "2.6.1",
     "prisma": "3.8.1",
     "twit": "2.2.11"
