--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,10 +30,10 @@ jobs:
         run: pnpm install
 
       - name: Generate prisma client
-        run: pnpx prisma generate
+        run: pnpm prisma generate
 
       - name: Test
-        run: pnpx tsc --noEmit
+        run: pnpm tsc --noEmit
 
   test-api-docker:
     runs-on: ubuntu-latest
@@ -82,4 +82,4 @@ jobs:
         run: pnpm install
 
       - name: Test
-        run: pnpx next lint
+        run: pnpm next lint
