--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,9 +16,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: pnpm/action-setup@v2.0.1
+      - uses: pnpm/action-setup@v2
         with:
-          version: 6.23.6
+          version: 7.1
 
       - name: Use Node.js 16.x
         uses: actions/setup-node@v2
@@ -30,10 +30,10 @@ jobs:
         run: pnpm install
 
       - name: Generate prisma client
-        run: pnpx prisma generate
+        run: pnpm prisma generate
 
       - name: Test
-        run: pnpx tsc --noEmit
+        run: pnpm tsc --noEmit
 
   test-api-docker:
     runs-on: ubuntu-latest
@@ -68,9 +68,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: pnpm/action-setup@v2.0.1
+      - uses: pnpm/action-setup@v2
         with:
-          version: 6.23.6
+          version: 7.1
 
       - name: Use Node.js 16.x
         uses: actions/setup-node@v2
@@ -82,4 +82,4 @@ jobs:
         run: pnpm install
 
       - name: Test
-        run: pnpx next lint
+        run: pnpm next lint
