--- a/api-nest/package.json
+++ b/api-nest/package.json
@@ -37,8 +37,11 @@
   },
   "dependencies": {
     "@nestjs/common": "9.0.7",
+    "@nestjs/config": "2.2.0",
     "@nestjs/core": "9.0.7",
     "@nestjs/platform-fastify": "9.0.7",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.13.2",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.6"
