--- a/api/.env.example
+++ b/api/.env.example
@@ -4,6 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQL Server and SQLite.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+NODE_ENV="development"
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
 REDIS_URL="redis://:hello@localhost:6379/0"
 TWITTER_API_KEY='YOUR_TWITTER_API_KEY'
