--- a/api-nest/package.json
+++ b/api-nest/package.json
@@ -39,9 +39,12 @@
     "@nestjs/common": "9.0.7",
     "@nestjs/config": "2.2.0",
     "@nestjs/core": "9.0.7",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-fastify": "9.0.7",
+    "@prisma/client": "4.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
+    "prisma": "4.1.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.6"
