--- a/api-nest/package.json
+++ b/api-nest/package.json
@@ -42,6 +42,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-fastify": "9.0.7",
     "@prisma/client": "4.1.0",
+    "cache-manager": "4.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "prisma": "4.1.0",
@@ -53,6 +54,7 @@
     "@nestjs/cli": "9.0.0",
     "@nestjs/schematics": "9.0.1",
     "@nestjs/testing": "9.0.7",
+    "@types/cache-manager": "4.0.1",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.6",
     "@types/node": "18.6.3",
