--- a/api-nest/package.json
+++ b/api-nest/package.json
@@ -37,13 +37,16 @@
   },
   "dependencies": {
     "@fastify/static": "6.5.0",
+    "@nestjs/axios": "0.1.0",
     "@nestjs/common": "9.0.7",
     "@nestjs/config": "2.2.0",
     "@nestjs/core": "9.0.7",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-fastify": "9.0.7",
+    "@nestjs/schedule": "2.1.0",
     "@nestjs/swagger": "6.0.4",
     "@prisma/client": "4.1.0",
+    "axios": "0.27.2",
     "cache-manager": "4.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
@@ -52,6 +55,7 @@
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.6",
+    "twit": "2.2.11",
     "undici": "5.8.0"
   },
   "devDependencies": {
@@ -59,10 +63,12 @@
     "@nestjs/schematics": "9.0.1",
     "@nestjs/testing": "9.0.7",
     "@types/cache-manager": "4.0.1",
+    "@types/cron": "2.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.6",
     "@types/node": "18.6.3",
     "@types/supertest": "2.0.12",
+    "@types/twit": "2.2.30",
     "@typescript-eslint/eslint-plugin": "5.31.0",
     "@typescript-eslint/parser": "5.31.0",
     "eslint": "8.21.0",
