--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,7 +3,7 @@ FROM node:16-alpine AS BUILD_SERVER
 
 WORKDIR /usr/src/app
 
-RUN wget -qO- https://get.pnpm.io/v6.16.js | node - add --global pnpm
+RUN wget -qO- https://get.pnpm.io/install.sh | sh -
 
 COPY package.json pnpm-*.yaml ./
 COPY api/package.json ./api/
@@ -20,7 +20,7 @@ FROM node:16-alpine AS RUNTIME_CONTAINER
 
 WORKDIR /usr/src/app
 
-RUN wget -qO- https://get.pnpm.io/v6.16.js | node - add --global pnpm
+RUN wget -qO- https://get.pnpm.io/install.sh | sh -
 
 COPY package.json pnpm-*.yaml ./
 COPY api/package.json ./api/
