--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -3,7 +3,7 @@ FROM node:16-alpine
 
 WORKDIR /usr/src/app
 
-RUN wget -qO- https://get.pnpm.io/v6.16.js | node - add --global pnpm
+RUN wget -qO- https://get.pnpm.io/install.sh | sh -
 
 COPY package.json pnpm-lock.yaml ./
 COPY prisma ./prisma
@@ -11,8 +11,6 @@ COPY prisma ./prisma
 RUN pnpm install
 
 COPY . .
-
-ENV NODE_ENV production
 
 EXPOSE 4000
 CMD [ "pnpm", "run", "dev" ]
