--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,9 +1,9 @@
 # Stage 1 - build the api server
-FROM node:16-alpine AS BUILD_SERVER
+FROM node:16-alpine AS build
 
 WORKDIR /usr/src/app
 
-RUN wget -qO- https://get.pnpm.io/install.sh | sh -
+RUN corepack enable && corepack prepare pnpm@7.6.0 --activate
 
 COPY package.json pnpm-*.yaml ./
 COPY api/package.json ./api/
@@ -16,11 +16,11 @@ RUN pnpm --filter=api prisma:generate
 RUN pnpm --filter=api run build
 
 # Stage 2 - Run the built application
-FROM node:16-alpine AS RUNTIME_CONTAINER
+FROM node:16-alpine AS production
 
 WORKDIR /usr/src/app
 
-RUN wget -qO- https://get.pnpm.io/install.sh | sh -
+RUN corepack enable && corepack prepare pnpm@7.6.0 --activate
 
 COPY package.json pnpm-*.yaml ./
 COPY api/package.json ./api/
@@ -29,7 +29,7 @@ COPY api/prisma ./api/prisma
 RUN pnpm install --frozen-lockfile --prod --filter=api
 RUN pnpm --filter=api prisma:generate
 
-COPY --from=BUILD_SERVER /usr/src/app/api/dist ./api/dist
+COPY --from=build /usr/src/app/api/dist ./api/dist
 
 ENV NODE_ENV production
 
