--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "prisma:generate": "pnpm prisma generate",
     "dev": "nest start --watch",
     "dev:debug": "nest start --debug --watch",
     "start": "node dist/main",
