--- a/api/package.json
+++ b/api/package.json
@@ -1,35 +1,87 @@
 {
   "name": "api",
-  "private": true,
   "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "dev": "nodemon --watch './**/*.ts' --exec ts-node src/index.ts",
-    "start": "node dist/index.js",
-    "build": "tsc",
+    "prebuild": "rimraf dist",
+    "build": "nest build",
     "prisma:generate": "pnpm prisma generate",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nest start --watch",
+    "dev:debug": "nest start --debug --watch",
+    "start": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   },
   "dependencies": {
+    "@fastify/static": "6.5.0",
+    "@nestjs/axios": "0.1.0",
+    "@nestjs/common": "9.0.7",
+    "@nestjs/config": "2.2.0",
+    "@nestjs/core": "9.0.7",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/platform-fastify": "9.0.7",
+    "@nestjs/schedule": "2.1.0",
+    "@nestjs/swagger": "6.0.4",
     "@prisma/client": "4.1.0",
-    "bullmq": "1.86.8",
+    "axios": "0.27.2",
+    "cache-manager": "4.1.0",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.13.2",
     "date-fns": "2.29.1",
-    "debug": "4.3.4",
-    "dotenv": "16.0.1",
-    "envalid": "7.3.1",
-    "fastify": "4.3.0",
-    "ioredis": "5.2.2",
-    "node-cache": "5.1.2",
-    "node-fetch": "2.6.7",
     "prisma": "4.1.0",
-    "twit": "2.2.11"
+    "reflect-metadata": "0.1.13",
+    "rimraf": "3.0.2",
+    "rxjs": "7.5.6",
+    "twit": "2.2.11",
+    "undici": "5.8.0"
   },
   "devDependencies": {
-    "@types/debug": "4.1.7",
-    "@types/node": "18.6.1",
-    "@types/node-fetch": "2.6.2",
+    "@nestjs/cli": "9.0.0",
+    "@nestjs/schematics": "9.0.1",
+    "@nestjs/testing": "9.0.7",
+    "@types/cache-manager": "4.0.1",
+    "@types/cron": "2.0.0",
+    "@types/express": "4.17.13",
+    "@types/jest": "28.1.6",
+    "@types/node": "18.6.3",
+    "@types/supertest": "2.0.12",
     "@types/twit": "2.2.30",
-    "nodemon": "2.0.19",
+    "@typescript-eslint/eslint-plugin": "5.31.0",
+    "@typescript-eslint/parser": "5.31.0",
+    "eslint": "8.21.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "jest": "28.1.3",
+    "prettier": "2.7.1",
+    "source-map-support": "0.5.21",
+    "supertest": "6.2.4",
+    "ts-jest": "28.0.7",
+    "ts-loader": "9.3.1",
     "ts-node": "10.9.1",
-    "typescript": "4.7.4"
+    "tsconfig-paths": "4.0.0",
+    "tslib": "2.4.0",
+    "typescript": "4.7.4",
+    "webpack": "5.74.0"
   }
 }
