--- a/api/package.json
+++ b/api/package.json
@@ -43,6 +43,7 @@
     "@nestjs/platform-fastify": "9.0.7",
     "@nestjs/schedule": "2.1.0",
     "@nestjs/swagger": "6.0.4",
+    "@nestjs/terminus": "9.1.0",
     "@prisma/client": "4.1.0",
     "axios": "0.27.2",
     "cache-manager": "4.1.0",
