--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "generate-openapi": "rm -rf src/external/api/generated && pnpm openapi --input http://0.0.0.0:4000/docs-json --output ./src/external/api/generated --useOptions"
   },
   "dependencies": {
     "@radix-ui/colors": "0.1.8",
@@ -37,6 +38,7 @@
     "@types/react": "18.0.15",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "openapi-typescript-codegen": "0.23.0",
     "sass": "1.54.0",
     "typescript": "4.7.4"
   }
